<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Главное"
            app:titleTextColor="@android:color/white"
            app:layout_scrollFlags="scroll|snap|enterAlways"
            app:menu="@menu/home_toolbar_menu" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--О нас-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/home_about_us_etc"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--Последние заказы-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-black"
                android:paddingStart="15dp"
                android:textSize="18sp"
                android:text="Последние заказы"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_last_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--Сообщение об отсутствии заказов-->
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/error_empty_orders"
                android:textAlignment="center" />

            <!--Могут понравится-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:text="@string/home_might_like"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_mightlike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:overScrollMode="never" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/action_communication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/action_call"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="3dp"
                    android:layout_weight="1"
                    android:src="@drawable/phone" />

                <ImageView
                    android:id="@+id/action_vk"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/vk" />

                <ImageView
                    android:id="@+id/action_insta"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/insta" />

                <ImageView
                    android:id="@+id/action_mail"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/mail" />


            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>